<resources>
    <string name="app_name">TextTraQ</string>
    <string name="start_journey">Start Journey</string>
    <string name="enter_destination">Enter Destination</string>
    <string name="favorites">Favorites</string>
    <string name="enter_your_username">Enter Your Username</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="log_in">Log In</string>
    <string name="password_hint">Enter Password</string>
    <string name="enter_email">Enter Username</string>
    <string name="texttraq">TextTraQ</string>
    <string name="contact_1_name">Contact 1 Name</string>
    <string name="contact_2_name">Contact 2 Name</string>
    <string name="create_new_account">Create New Account</string>
    <string name="confirm_your_password">Confirm Your Password</string>
    <string name="create_account">Create Account</string>
    <string name="title_activity_contact">ContactActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="contacts">Contacts</string>
    <string name="navigation">Navigation</string>
    <string name="settings">Settings</string>
    <string name="stop">Stop</string>
    <string name="pause">Pause</string>
    <string name="time_between_messages">Time Between Messages</string>
    <string name="input_time_between_messages">Input Time Between Messages</string>
    <string name="send_location">Send Location</string>
    <string name="send_eta">Send ETA</string>
    <string name="send_speed">Send Speed</string>
    <string name="apply_settings">Apply Settings</string>
    <string name="contact1name">Contact1Name</string>
    <string name="contact2name">Contact2Name</string>
    <string name="contactname">ContactName</string>
    <string name="minutes_between_text">Minutes Between Text</string>
    <string name="enter_a_custom_message">Enter a Custom Message</string>
    <string name="search_location_here">Search Location Here</string>
    <string name="search">Search</string>
    <string name="empty_not_saved">No word entered</string>

</resources>
